clearnotation-v1.0.ebnf
(* ClearNotation v1.0 normative grammar
 *
 * This grammar is parameterized by the trusted directive registry loaded from
 * clearnotation.toml before parsing begins. Each registered directive declares:
 *
 * - name
 * - placement = block | inline
 * - body_mode = none | parsed | raw
 *
 * Parsing never executes extension code. The registry only supplies static
 * signatures needed to classify directives and their body modes.
 *
 * ::meta is reserved core syntax with its own body grammar. It is not matched
 * through the extension registry.
 *)

document                = [ bom ], blank_lines, [ meta_block, blank_lines ], [ block_sequence ], EOF ;

block_sequence          = block, { blank_lines, block }, [ blank_lines ] ;

block                   = comment
                        | heading
                        | thematic_break
                        | fenced_code_block
                        | blockquote
                        | unordered_list
                        | ordered_list
                        | block_directive_none
                        | block_directive_parsed
                        | block_directive_raw
                        | paragraph ;

comment                 = opt_indent, "//", { comment_char }, NL ;
inline_comment          = ( SP | HT ), "//", { comment_char } ;
comment_char            = ? any Unicode scalar value except NL ? ;

blank_lines             = { blank_line } ;
blank_line              = opt_indent, NL ;

heading                 = opt_indent, heading_marker, SP, inline_sequence, line_end ;
heading_marker          = "#"
                        | "##"
                        | "###"
                        | "####"
                        | "#####"
                        | "######" ;

thematic_break          = opt_indent, "---", opt_ws, NL ;

fenced_code_block       = opt_indent, "```", language_tag, opt_ws, NL,
                          { fenced_code_line },
                          opt_indent, "```", opt_ws, NL ;

fenced_code_line        = ? any line whose left-trimmed content is not exactly "```" ? ;

blockquote              = blockquote_line, { blockquote_line } ;
blockquote_line         = opt_indent, ">", SP, inline_sequence, line_end ;

indent                  = { SP } ;

unordered_list          = unordered_item, { unordered_item } ;
unordered_item          = indent, "-", SP, inline_sequence, line_end,
                          [ list_item_body ] ;
list_item_body          = { list_item_continuation | nested_list } ;
list_item_continuation  = blank_lines, indent, inline_sequence, line_end ;
nested_list             = unordered_list | ordered_list ;

ordered_list            = ordered_item, { ordered_item } ;
ordered_item            = indent, integer_unsigned, ".", SP, inline_sequence, line_end,
                          [ list_item_body ] ;

(* List indentation uses spaces only. Tabs in the leading whitespace of a
   line inside a list produce a parse error. Nesting depth increases by
   2 spaces for unordered items and by the marker width for ordered items. *)

block_directive_none    = opt_indent, "::", block_directive_name_none, [ attribute_list ], opt_ws, NL ;

block_directive_parsed  = opt_indent, "::", block_directive_name_parsed, [ attribute_list ], "{", opt_ws, NL,
                          blank_lines,
                          [ block_sequence ],
                          directive_close_line ;

block_directive_raw     = opt_indent, "::", block_directive_name_raw, [ attribute_list ], "{", opt_ws, NL,
                          { raw_body_line },
                          directive_close_line ;

directive_close_line    = opt_indent, "}", opt_ws, NL ;

raw_body_line           = ? any line whose left-trimmed content is not exactly "}" ? ;

meta_block              = opt_indent, "::meta{", opt_ws, NL,
                          { meta_entry | blank_line },
                          directive_close_line ;

meta_entry              = opt_indent, dotted_identifier, opt_ws, "=", opt_ws, value, opt_ws, NL ;

paragraph               = paragraph_line, { paragraph_line } ;

paragraph_line          = opt_indent, inline_sequence, line_end ;

inline_sequence         = inline_item, { inline_item } ;

inline_item             = text_fragment
                        | code_span
                        | strong
                        | emphasis
                        | link
                        | note
                        | inline_directive ;

strong                  = "+{", styled_sequence, "}" ;
emphasis                = "*{", styled_sequence, "}" ;

styled_sequence         = styled_item, { styled_item } ;
styled_item             = styled_text_fragment | code_span ;

link                    = "[", link_label, SP, "->", SP, link_target, "]" ;
link_label              = link_label_item, { link_label_item } ;
link_label_item         = link_text_fragment | code_span | strong | emphasis ;
link_target             = link_target_char, { link_target_char } ;

note                    = "^{", note_sequence, "}" ;
note_sequence           = note_item, { note_item } ;
note_item               = note_text_fragment
                        | code_span
                        | strong
                        | emphasis
                        | link
                        | inline_directive ;

inline_directive        = "::", inline_directive_name, [ attribute_list ] ;

code_span               = "`", code_span_item, { code_span_item }, "`" ;
code_span_item          = escaped_backtick | escaped_backslash | code_span_char ;

text_fragment           = text_char, { text_char } ;
styled_text_fragment    = styled_text_char, { styled_text_char } ;
link_text_fragment      = link_text_char, { link_text_char } ;
note_text_fragment      = note_text_char, { note_text_char } ;
link_target_char        = link_target_escape | plain_link_target_char ;

text_char               = escape | plain_text_char ;
styled_text_char        = escape | plain_styled_text_char ;
link_text_char          = escape | plain_link_text_char ;
note_text_char          = escape | plain_note_text_char ;
link_target_escape      = "\\\\"
                        | "\\]" ;

attribute_list          = "[", opt_ws, [ attribute, { opt_ws, ",", opt_ws, attribute } ], opt_ws, "]" ;
attribute               = identifier, opt_ws, "=", opt_ws, value ;

value                   = string | boolean | integer | array ;
array                   = "[", opt_ws, [ scalar_value, { opt_ws, ",", opt_ws, scalar_value } ], opt_ws, "]" ;
scalar_value            = string | boolean | integer ;

string                  = "\"", { string_char }, "\"" ;
string_char             = string_escape | plain_string_char ;
string_escape           = "\\\\"
                        | "\\\""
                        | "\\n"
                        | "\\r"
                        | "\\t" ;

boolean                 = "true" | "false" ;
integer                 = [ "-" ], integer_unsigned ;
integer_unsigned        = digit, { digit } ;

dotted_identifier       = identifier, { ".", identifier } ;
identifier              = identifier_head, { identifier_tail } ;
identifier_head         = lower ;
identifier_tail         = lower | digit | "-" ;

language_tag            = language_part, { language_sep, language_part } ;
language_part           = alpha_num, { alpha_num } ;
language_sep            = "-" | "+" | "." ;

escape                  = "\\", escapable_char ;
escapable_char          = "\\"
                        | "{"
                        | "}"
                        | "["
                        | "]"
                        | "`"
                        | "+"
                        | "*"
                        | "^"
                        | ":"
                        | ">"
                        | "-"
                        | "#" ;

escaped_backtick        = "\\`" ;
escaped_backslash       = "\\\\" ;

plain_text_char         = ? any Unicode scalar value except NL and any sequence start
                           recognized at a valid inline boundary as "\", "`", "+{",
                           "*{", "^{", "[", or "::" ? ;

plain_styled_text_char  = ? any Unicode scalar value except NL and any sequence start
                           recognized as "\", "`", "+{", "*{", "^{", "[", "::",
                           or "}" ? ;

plain_link_text_char    = ? any Unicode scalar value except NL and any sequence start
                           recognized as "\", "`", "+{", "*{", "^{", "[", "::",
                           "}", "]", or the first top-level unescaped " -> " ? ;

plain_note_text_char    = ? any Unicode scalar value except NL and any sequence start
                           recognized as "\", "`", "+{", "*{", "^{", "[", "::",
                           or "}" ? ;

plain_link_target_char  = ? any Unicode scalar value except "\", "]", SP, HT, or NL ? ;

plain_string_char       = ? any Unicode scalar value except "\", "\"", or NL ? ;

code_span_char          = ? any Unicode scalar value except "\", "`", or NL ? ;

line_end                = opt_ws, [ inline_comment ], NL ;
opt_indent              = { SP | HT } ;
opt_ws                  = { SP | HT } ;

digit                   = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;
lower                   = "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" | "k" | "l" | "m"
                        | "n" | "o" | "p" | "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z" ;
alpha_num               = lower | "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J" | "K" | "L"
                        | "M" | "N" | "O" | "P" | "Q" | "R" | "S" | "T" | "U" | "V" | "W" | "X" | "Y" | "Z"
                        | digit ;

bom                     = ? Unicode byte order mark U+FEFF ? ;
SP                      = " " ;
HT                      = ? horizontal tab U+0009 ? ;
NL                      = ? line feed U+000A or carriage return + line feed U+000D U+000A ? ;
EOF                     = ? end of file ? ;

block_directive_name_none   = ? a registered directive name with placement = block and body_mode = none ? ;
block_directive_name_parsed = ? a registered directive name with placement = block and body_mode = parsed ? ;
block_directive_name_raw    = ? a registered directive name with placement = block and body_mode = raw ? ;
inline_directive_name       = ? a registered directive name with placement = inline and body_mode = none ? ;

(* Built-in raw-body grammar: ::table[...]{
 *
 * ::table[header=true, align=["left", "right"]]{
 * Name | Value
 * Foo  | Bar
 * }
 *)

table_body              = table_row, { NL, table_row }, [ NL ] ;
table_row               = table_cell, { opt_ws, "|", opt_ws, table_cell } ;
table_cell              = { table_cell_char } ;
table_cell_char         = table_escape | plain_table_cell_char ;
table_escape            = "\\|" | "\\\\" ;
plain_table_cell_char   = ? any Unicode scalar value except "\", "|", or NL ? ;

(* Parse-time errors
 *
 * - ::meta must be the first nonblank block if present.
 * - Headings, list items, and blockquotes require exactly one ASCII space after
 *   their marker.
 * - Code fences require a language tag.
 * - Paragraph lines are any nonblank lines that do not match another block
 *   opener and whose left-trimmed content is not exactly "}".
 * - Inline constructs and directive blocks must close before the containing
 *   line or block ends.
 * - +{, *{, ^{, [, and inline ::name[...] start a construct only at a valid
 *   inline boundary: start of the inline sequence or immediately after a
 *   non-alphanumeric character.
 * - Unknown block or inline directives are parse errors.
 * - Block comments ("//") are recognized between blocks and inside parsed
 *   directive bodies. They are NOT recognized inside raw directive bodies,
 *   fenced code blocks, or ::meta{} blocks. Comments are preserved in the
 *   parsed tree but stripped during normalization.
 * - Inline comments ("//") may appear at the end of any inline-bearing line
 *   (heading, paragraph, list item, blockquote) when preceded by at least one
 *   space or tab. The "//" must not be inside a code span. Inline comments
 *   are stripped during parsing and do not appear in the parsed tree.
 * - Using a directive in a placement or body form not declared in the trusted
 *   registry is a parse error.
 * - Invalid escape sequences are parse errors.
 * - The separator in a link is the first top-level unescaped " -> ".
 * - Link targets are nonempty and may not contain unescaped ASCII spaces or tabs.
 * - A line whose left-trimmed content is exactly "}" always closes the current
 *   raw or parsed directive body.
 * - Tabs in the leading whitespace of a line inside a list produce a parse
 *   error. List indentation uses spaces only.
 *)

(* Normalization-time errors
 *
 * - Circular includes are normalization errors.
 * - Include depth exceeding 10 levels is a normalization error.
 *)
